# gfModParser

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  coverage.sh  lint.sh  pyproject.toml  tox.ini
.github/: copilot-instructions.md  dependabot.yml  zizmor.yml
.github/agents/: docstring-maintainer.agent.md
.github/workflows/: bandit.yml  black.yml  codspeed.yml  coveralls.yml  isort.yml  linux-arm.yml  linux-quad.yml  linux.yml  macos.yml  mypy.yml  pypi.yml  pypy.yml  windows.yml  zizmor.yml
gfModParser/: __init__.py  io.py  utils.py
gfModParser/modules/: arrays.py  attributes.py  common.py  components.py  expressions.py  generics.py  mod.py  mod15.py  mod16.py  namelists.py  namespaces.py  operators.py  procedures.py  properties.py  simds.py  summary.py  symbols.py  typespecs.py  utils.py
tests/: Makefile  Makefile15  README.md  conftest.py  extractAll.sh  makedepf08.awk  test_arrays.py  test_attributes.py  test_components.py  test_expression.py  test_init.py  test_interface.py  test_mod_txt.py  test_namelists.py  test_operators.py  test_procedures.py  test_properties.py  test_quad.py  test_symbols.py  test_typebound_proc.py  test_typespec.py  test_unsigned.py  test_utils.py
tests/src/: Makefile  basic.f90  coarrays.f90  common.f90  complex.f90  cray_pointers.f90  dt.f90  dummy_arrays.f90  elemental.f90  explicit_arrays.f90  gh55.f90  gh56.f90  interface.f90  isoc.f90  namelist.f90  pdt.f90  pointers.f90  proc_ptrs.f90  quad.f90  simd.f90  strings.f90  submodule.f90  t_params_modules.f90  unicode.f90
tests/src15/: unsigned.f90
(+40 files in other folders)
